@@ -465,6 +465,8 @@
                             <option>--add-opens</option>
                             <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
                             <option>--add-exports</option>
+                            <option>javafx.controls/com.sun.javafx.scene=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
                             <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
                             <option>--add-exports</option>
                             <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
@@ -657,7 +659,7 @@
 
     <properties>
         <maven.compiler.release>11</maven.compiler.release>
-        <javafx.version>16</javafx.version>
+        <javafx.version>19.0.2.1</javafx.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
 
         <kotlin.version>1.8.22</kotlin.version>
@@ -666,7 +668,7 @@
         <kotlin.compiler.languageVersion>1.8</kotlin.compiler.languageVersion>
         <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
 
-        <junit.version>5.9.2</junit.version>
+        <junit.version>5.10.0</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -700,20 +702,20 @@
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
-            <version>4.0.16-alpha</version>
+            <version>4.0.17</version>
         </dependency>
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-junit5</artifactId>
-            <version>4.0.16-alpha</version>
+            <version>4.0.17</version>
         </dependency>
         <!-- jdk-9+181 for Java 9, jdk-11+26 for Java 11 -->
-        <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>openjfx-monocle</artifactId>
-            <version>jdk-12.0.1+2</version>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.testfx</groupId>-->
+<!--            <artifactId>openjfx-monocle</artifactId>-->
+<!--            <version>jdk-12.0.1+2</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -776,5 +778,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- ScenicView.show(...) -->
+<!--        <dependency>-->
+<!--            <groupId>net.raumzeitfalle.fx</groupId>-->
+<!--            <artifactId>scenic-view</artifactId>-->
+<!--            <version>11.0.2</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
